working on number picker

--- a/app/globals.css
+++ b/app/globals.css
@@ -3,13 +3,25 @@
 @tailwind utilities;
 
 :root {
-  --primary-color: #0E1525;
-  --secondary-color: #FF9D01;
+	--primary-color: #0e1525;
+	--secondary-color: #ff9d01;
 }
 
 @media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
+	:root {
+		--background: #0a0a0a;
+		--foreground: #ededed;
+	}
+}
+
+@layer utilities {
+	/* Chrome, Safari and Opera */
+	.no-scrollbar::-webkit-scrollbar {
+		display: none;
+	}
+
+	.no-scrollbar {
+		-ms-overflow-style: none; /* IE and Edge */
+		scrollbar-width: none; /* Firefox */
+	}
 }
